--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -11,10 +11,15 @@
 
         <img src="images/avatar.jpg" alt="my photo" class="avatar">
 
+        <!-- Your name is defined in the _config.yml file -->
         <h1 class="header-name">{% site.resume_name %}</h1>
 
         <div class="title-bar">
+
+          <!-- Your title is also defined in the _config.yml file -->
           <h2 class="header-title">{% site.resume_title %}</h2>
+
+          <!-- annnd guess where these are defined? Yup, you guessed it: the _config.yml file -->
           <ul class="icon-links">
             <li class="icon-link"><a href="" class=""></a></li>
           </ul>
@@ -29,13 +34,26 @@
       </header>
 
       <section class="primary-section">
+
         <header class="section-header">
           <h2>Experience</h2>
         </header>
 
+        <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <div class="resume-item">
+          <h3 class="resume-item-title">Springfield Nuclear Power Plant</h3>
+          <h4 class="resume-item-details">Safety Inspector &bull; Nov, 1980 &emdash; Present</h4>
 
-        </div>
+          <p class="resume-item-copy">Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points:</p>
+
+          <ul class="resume-item-list">
+            <li>Ate lots of donuts</li>
+            <li>Fell asleep rarely</li>
+            <li>Left promptly at end of day (sometimes earlier)</li>
+          </ul>
+
+        </div><!-- end of resume-item -->
+
       </section>
 
     </div>
