--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -12,12 +12,12 @@
         <img src="images/avatar.jpg" alt="my photo" class="avatar">
 
         <!-- Your name is defined in the _config.yml file -->
-        <h1 class="header-name">{% site.resume_name %}</h1>
+        <h1 class="header-name">{{ site.resume_name }}</h1>
 
         <div class="title-bar">
 
           <!-- Your title is also defined in the _config.yml file -->
-          <h2 class="header-title">{% site.resume_title %}</h2>
+          <h2 class="header-title">{{ site.resume_title }}</h2>
 
           <!-- annnd guess where these are defined? Yup, you guessed it: the _config.yml file -->
           <ul class="icon-links">
@@ -29,7 +29,7 @@
           <p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>
         </div>
 
-        <a href="mailto:{% site.resume_contact_email %}" class="contact-button"></a>
+        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button"></a>
 
       </header>
 
