more of the spikings

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -33,6 +33,8 @@
 
       </header>
 
+      <!-- begin Experience -->
+
       <section class="primary-section">
 
         <header class="section-header">
@@ -42,7 +44,7 @@
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <div class="resume-item">
           <h3 class="resume-item-title">Springfield Nuclear Power Plant</h3>
-          <h4 class="resume-item-details">Safety Inspector &bull; Nov, 1980 &emdash; Present</h4>
+          <h4 class="resume-item-details">Safety Inspector &bull; Nov, 1980 &mdash; Present</h4>
 
           <p class="resume-item-copy">Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points:</p>
 
@@ -54,7 +56,35 @@
 
         </div><!-- end of resume-item -->
 
+        <!-- another resume item -->
+        <div class="resume-item">
+          <h3 class="resume-item-title">Sir Putt-A-Lot's Merrie Olde Fun Centre</h3>
+          <h4 class="resume-item-details">Windmill Crank Operator &bull; Jun, 1978 &mdash; Sept, 1979</h4>
+
+          <p class="resume-item-copy">If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.</p>
+
+        </div><!-- end of resume-item -->
+
+        <!-- by now you're getting the picture... -->
+        <div class="resume-item">
+          <h3 class="resume-item-title">Simpson Lazer Tag</h3>
+          <h4 class="resume-item-details">Front Desk Attendant &bull; Jun, 1975 &mdash; May, 1978</h4>
+
+          <p class="resume-item-copy">Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.</p>
+
+        </div><!-- end of resume-item -->
+
       </section>
+
+      <!-- end Experience -->
+
+      <!-- begin Education -->
+
+      <section class="primary-section">
+
+      </section>
+
+      <!-- end Education -->
 
     </div>
 
