finish spiking the markups

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -45,9 +45,7 @@
         <div class="resume-item">
           <h3 class="resume-item-title">Springfield Nuclear Power Plant</h3>
           <h4 class="resume-item-details">Safety Inspector &bull; Nov, 1980 &mdash; Present</h4>
-
           <p class="resume-item-copy">Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points:</p>
-
           <ul class="resume-item-list">
             <li>Ate lots of donuts</li>
             <li>Fell asleep rarely</li>
@@ -60,7 +58,6 @@
         <div class="resume-item">
           <h3 class="resume-item-title">Sir Putt-A-Lot's Merrie Olde Fun Centre</h3>
           <h4 class="resume-item-details">Windmill Crank Operator &bull; Jun, 1978 &mdash; Sept, 1979</h4>
-
           <p class="resume-item-copy">If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.</p>
 
         </div><!-- end of resume-item -->
@@ -69,7 +66,6 @@
         <div class="resume-item">
           <h3 class="resume-item-title">Simpson Lazer Tag</h3>
           <h4 class="resume-item-details">Front Desk Attendant &bull; Jun, 1975 &mdash; May, 1978</h4>
-
           <p class="resume-item-copy">Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.</p>
 
         </div><!-- end of resume-item -->
@@ -82,9 +78,24 @@
 
       <section class="primary-section">
 
+        <header class="section-header">
+          <h2>Education</h2>
+        </header>
+
+        <div class="resume-item">
+          <h3 class="resume-item-title">Springfield College</h3>
+          <h4 class="resume-item-details">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
+          <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
+        </div>
+
       </section>
 
       <!-- end Education -->
+
+      <footer class="page-footer">
+        <p>Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
+        <p>If this is your live resume, you can remove or modify this part. ;-)</p>
+      </footer>
 
     </div>
 
