--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -55,7 +55,7 @@
 // type utilities
 
 @mixin sans {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 @mixin sans_light {
@@ -81,4 +81,18 @@
 @mixin sans_extrabold {
   @include sans;
   font-weight: 800;
+}
+
+@mixin serif {
+  font-family: "Lora", "Minion Pro", Palatino, Georgia, serif;
+}
+
+@mixin serif_regular {
+  @include serif;
+  font-weight: 400;
+}
+
+@mixin serif_bold {
+  @include serif;
+  font-weight: 700;
 }
