--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -13,6 +13,12 @@
   border-radius: $radius;
 }
 
+@mixin transition($value) {
+  -webkit-transition: $value;
+  -moz-transition: $value;
+  transition: $value;
+}
+
 // Clearfix
 //
 // Clears floats via mixin (avoid using as a class).
@@ -95,4 +101,12 @@
 @mixin serif_bold {
   @include serif;
   font-weight: 700;
+}
+
+// layout
+
+@mixin section_border {
+  border-top: 4px solid #c7c7c7;
+  border-bottom: 2px solid #c7c7c7;
+  padding: .5rem 0;
 }
