tighten up that spacing yo

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -88,6 +88,7 @@
     @include sans_bold;
     margin: 0 0 0;
     font-size: 1.5rem;
+    letter-spacing: -.05rem;
   }
 
   .resume-item-details {
