--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -103,5 +103,5 @@
 @mixin section_border {
   border-top: 4px solid #c7c7c7;
   border-bottom: 2px solid #c7c7c7;
-  padding: .5rem 0;
+  padding: .2rem 0 .4rem;
 }
