--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -19,12 +19,8 @@
           <!-- Your title is also defined in the _config.yml file -->
           <h2 class="header-title">{{ site.resume_title }}</h2>
 
-          <!-- annnd guess where these are defined? Yup, you guessed it: the _config.yml file -->
-          {% if site.resume_links %}
-          <ul class="icon-links">
-            <li class="icon-link"><a href="" class=""></a></li>
-          </ul>
-          {% endif %}
+          <!-- This is the markup for the icon links; moved out to an include because it's very verbose, and you shouldn't ever need to edit the markup (unless you want to re-order the icons); if you want to customize which links appear, define them in the _config.yml file -->
+          {% include icon-links.html %}
         </div>
 
         <div class="executive-summary">
