--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -18,8 +18,7 @@
 
 // page header styles
 
-.page-header {
-  padding: 1.5rem 0;
+.page-header { padding: 1.5rem 0;
 
   .avatar {
     width: 95px;
@@ -98,9 +97,7 @@
     color: #fff;
   }
 
-  &.not-looking {
-    width: 400px;
-  }
+  &.not-looking { width: 400px; }
 }
 
 // resume content styles
