--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -54,6 +54,10 @@
       float: left;
     }
   }
+
+  .executive-summary {
+    @media screen and (min-width: 600px) { font-size: 1.125rem; }
+  }
 }
 
 .icon-links {
@@ -109,14 +113,20 @@
 
   .resume-item-title {
     @include sans_bold;
-    margin: 0 0 0;
+    margin: 0 0 .75rem;
     font-size: 1.5rem;
     letter-spacing: -.05rem;
+    line-height: 1;
   }
 
   .resume-item-details {
-    font-size: 1.25rem;
-    margin: 0 0 1rem;
+    font-size: 1.125rem;
+    margin: 0 0 .75rem;
+    line-height: 1;
+  }
+
+  .resume-item-copy {
+    margin: .75rem 0 0;
   }
 }
 
