add extra p to sample copy

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -54,6 +54,7 @@
             <li>Fell asleep rarely</li>
             <li>Left promptly at end of day (sometimes earlier)</li>
           </ul>
+          <p class="resume-item-copy">If you're going to copy paste markup, or edit it, just be sure to keep the appropriate classnames on your new elements for styling purposes.</p>
 
         </div><!-- end of resume-item -->
 
