add options to display avatar or not

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -9,7 +9,10 @@
 
       <header class="page-header">
 
+        <!-- You can turn off the avatar in _config.yml by setting to false -->
+        {% if site.resume_avatar == 'true' %}
         <img src="images/avatar.jpg" alt="my photo" class="avatar">
+        {% endif %}
 
         <!-- Your name is defined in the _config.yml file -->
         <h1 class="header-name">{{ site.resume_name }}</h1>
