spike out skills section

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -130,9 +130,21 @@
         </header>
 
         <div class="resume-item">
-          <h3 class="resume-item-title">Springfield College</h3>
-          <h4 class="resume-item-details">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
-          <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
+          <h3 class="resume-item-title"></h3>
+          <h4 class="resume-item-details">Design</h4>
+          <p class="resume-item-copy">Product design, marketing design, print design, branding design, user experince design, information architecture</p>
+        </div>
+
+        <div class="resume-item">
+          <h3 class="resume-item-title"></h3>
+          <h4 class="resume-item-details">Front-end Development</h4>
+          <p class="resume-item-copy">HTML, CSS, CSS Preprocessors, jQuery, CoffeeScript, JavaScript, responsive design/adaptive layouts</p>
+        </div>
+
+        <div class="resume-item">
+          <h3 class="resume-item-title"></h3>
+          <h4 class="resume-item-details">Back-end Development</h4>
+          <p class="resume-item-copy">Jekyll, Ruby, Ruby on Rails, PHP, Liquid</p>
         </div>
 
       </section>
