--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -130,21 +130,18 @@
         </header>
 
         <div class="resume-item">
-          <h3 class="resume-item-title"></h3>
-          <h4 class="resume-item-details">Design</h4>
-          <p class="resume-item-copy">Product design, marketing design, print design, branding design, user experince design, information architecture</p>
+          <h4 class="resume-item-details">Donut design</h4>
+          <p class="resume-item-copy">Sprinkle art, icing design, eclair management, taste testing, donut/coffee pairing research</p>
         </div>
 
         <div class="resume-item">
-          <h3 class="resume-item-title"></h3>
-          <h4 class="resume-item-details">Front-end Development</h4>
-          <p class="resume-item-copy">HTML, CSS, CSS Preprocessors, jQuery, CoffeeScript, JavaScript, responsive design/adaptive layouts</p>
+          <h4 class="resume-item-details">Craft beer brewing</h4>
+          <p class="resume-item-copy">Hops inspection, brew testing, distribution management, bottle label design, festival and event management</p>
         </div>
 
         <div class="resume-item">
-          <h3 class="resume-item-title"></h3>
-          <h4 class="resume-item-details">Back-end Development</h4>
-          <p class="resume-item-copy">Jekyll, Ruby, Ruby on Rails, PHP, Liquid</p>
+          <h4 class="resume-item-details">Family leadership</h4>
+          <p class="resume-item-copy">Bread winning, conflict resolution, couch inspection, TV longevity testing</p>
         </div>
 
       </section>
@@ -160,9 +157,21 @@
         </header>
 
         <div class="resume-item">
-          <h3 class="resume-item-title">Springfield College</h3>
-          <h4 class="resume-item-details">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
-          <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
+          <h3 class="resume-item-title">Springfield Nuclear Power Plant</h3>
+          <h4 class="resume-item-details">Outstanding Achievement &bull; 2010</h4>
+          <p class="resume-item-copy">Awarded for stopping a nuclear meltdown, even though I also started it.</p>
+        </div>
+
+        <div class="resume-item">
+          <h3 class="resume-item-title">Duff Beer Customer of the year</h3>
+          <h4 class="resume-item-details">1997 &mdash; 2001, 2003, 2008 &mdash; 2012</h4>
+          <p class="resume-item-copy">Honored by <a href="https://en.wikipedia.org/wiki/Duff_Beer">Duff Beer</a> for being an outstanding customer several years straight. Qualifications included most beer consumed at a bar, most beer purchased, and most beer ralphed.</p>
+        </div>
+
+        <div class="resume-item">
+          <h3 class="resume-item-title">Moe's Patron of the Month</h3>
+          <h4 class="resume-item-details">12/2001, 8/2004</h4>
+          <p class="resume-item-copy">Specifically this prestigious awarded twice for stopping a robber with my belly.</p>
         </div>
 
       </section>
