--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -183,13 +183,14 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Links</h2>
+          <h2>Additional Links</h2>
         </header>
 
         <div class="resume-item">
-          <h3 class="resume-item-title">Springfield College</h3>
-          <h4 class="resume-item-details">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
-          <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
+          <ul class="resume-item-list">
+            <li><a href="#">Springfield Poker Club</a></li>
+            <li><a href="#">Springfield Donut Eater's User Group</a></li>
+          </ul>
         </div>
 
       </section>
