--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -140,7 +140,8 @@
 
   .resume-item-title,
   .resume-item-details,
-  .resume-item-copy {
+  .resume-item-copy,
+  .resume-item-list {
     a {
       color: #333;
       text-decoration: none;
