--- a/_includes/icon-links.html
+++ b/_includes/icon-links.html
@@ -1,41 +1,50 @@
-<!-- annnd guess where these are defined? Yup, you guessed it: the _config.yml file -->
-{% if site.resume_social_links %}
 <ul class="icon-links">
 
-  <!-- GitHub link -->
-  {% if site.resume_social_links.resume_github_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_github_url }}" class="icon-link">{% include icons/icon-github.html %}</a></li>
-  {% endif %}
+  {% for entry in site.data.resume.basics.profiles %}
+  <li class="icon-link-item"><a href="{{ entry.url }}" class="icon-link">
+    {% if entry.network == "GitHub" %}
 
-  <!-- Twitter link -->
-  {% if site.resume_social_links.resume_twitter_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_twitter_url }}" class="icon-link">{% include icons/icon-twitter.html %}</a></li>
-  {% endif %}
+      {% include icons/icon-github.html %}
 
-  <!-- Dribbble link -->
-  {% if site.resume_social_links.resume_dribbble_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_dribbble_url }}" class="icon-link">{% include icons/icon-dribbble.html %}</a></li>
-  {% endif %}
+    {% endif %}
 
-  <!-- Facebook link -->
-  {% if site.resume_social_links.resume_facebook_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_facebook_url }}" class="icon-link">{% include icons/icon-facebook.html %}</a></li>
-  {% endif %}
+    {% if entry.network == "Twitter" %}
 
-  <!-- LinkedIn link -->
-  {% if site.resume_social_links.resume_linkedin_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_linkedin_url }}" class="icon-link">{% include icons/icon-linkedin.html %}</a></li>
-  {% endif %}
+      {% include icons/icon-twitter.html %}
 
-  <!-- Instagram link -->
-  {% if site.resume_social_links.resume_instagram_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_instagram_url }}" class="icon-link">{% include icons/icon-instagram.html %}</a></li>
-  {% endif %}
+    {% endif %}
 
-  <!-- Website link -->
-  {% if site.resume_social_links.resume_website_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_website_url }}" class="icon-link">{% include icons/icon-website.html %}</a></li>
-  {% endif %}
+    {% if entry.network == "Dribbble" %}
+
+      {% include icons/icon-dribbble.html %}
+
+    {% endif %}
+
+    {% if entry.network == "Facebook" %}
+
+      {% include icons/icon-facebook.html %}
+
+    {% endif %}
+
+    {% if entry.network == "LinkedIn" %}
+
+      {% include icons/icon-linkedin.html %}
+
+    {% endif %}
+
+    {% if entry.network == "Instagram" %}
+
+      {% include icons/icon-instagram.html %}
+
+    {% endif %}
+
+    {% if entry.network == "Website" %}
+
+      {% include icons/icon-website.html %}
+
+    {% endif %}
+  </a></li>
+
+  {% endfor %}
 
 </ul>
-{% endif %}
