--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="executive-summary">
-          <p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>
+          <p>At your service. My code of behavior: Courage. Justice. Mercy. Generosity. Faith. Nobility. Hope.</p>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
