--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -27,7 +27,10 @@
         </div>
 
         <div class="executive-summary">
-          <p>At your service. My code of behavior: Courage. Justice. Mercy. Generosity. Faith. Nobility. Hope.</p>
+          <p>At your service.</p> 
+          <p>My code of behavior: Courage. Justice. Mercy. Generosity. Faith. Nobility. Hope.</p>
+          <p>My weapons: Creativity, innovation, positive attitude, Team spirit, openness, perseverance</p>
+          <p>My battlefields: SMARTplayds, Staffpick.io, Reparamiauto.com, Solera Inc., Nokia</p>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
