--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -29,7 +29,7 @@
         <div class="executive-summary">
           <p>At your service.</p> 
           <p>My code of behavior: Courage. Justice. Mercy. Generosity. Faith. Nobility. Hope.</p>
-          <p>My weapons: Creativity, innovation, positive attitude, Team spirit, openness, perseverance</p>
+          <p>My weapons: Creativity, Innovation, Positive Attitude, Team Spirit, Openness, Perseverance</p>
           <p>My battlefields: SMARTplayds, Staffpick.io, Reparamiauto.com, Solera Inc., Nokia</p>
         </div>
 
@@ -51,9 +51,11 @@
 
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <div class="resume-item">
-          <h3 class="resume-item-title">Springfield Nuclear Power Plant</h3>
-          <h4 class="resume-item-details">Safety Inspector &bull; Nov, 1980 &mdash; Present</h4>
-          <p class="resume-item-copy">Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points:</p>
+          <h3 class="resume-item-title">SMARTplayds</h3>
+          <h4 class="resume-item-details">Co-founder &bull; December, 2013 &mdash; Present</h4>
+          <p class="resume-item-copy">Starting-up SmartPlay DS, the Smartest way to cast interactive content to your audience.
+Smartplayds is an interactive, web-based content display solution for businesses and events to engage customers and employees.
+</p>
           <ul class="resume-item-list">
             <li>Ate lots of donuts</li>
             <li>Fell asleep rarely</li>
