--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -51,7 +51,7 @@
 
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <div class="resume-item">
-          <h3 class="resume-item-title">SMARTplayds</h3>
+          <h3 class="resume-item-title"><a href="http://smartplayds.com">SMARTplayds</a></h3>
           <h4 class="resume-item-details">Co-founder &bull; December, 2013 &mdash; Present</h4>
           <p class="resume-item-copy">Starting-up SmartPlay DS, the Smartest way to cast interactive content to your audience.
 Smartplayds is an interactive, web-based content display solution for businesses and events to engage customers and employees.
@@ -67,16 +67,16 @@ Smartplayds is an interactive, web-based content display solution for businesses
 
         <!-- another resume item -->
         <div class="resume-item">
-          <h3 class="resume-item-title">Sir Putt-A-Lot's Merrie Olde Fun Centre</h3>
-          <h4 class="resume-item-details">Windmill Crank Operator &bull; Jun, 1978 &mdash; Sept, 1979</h4>
+          <h3 class="resume-item-title"><a href="http://www.reparamiauto.com">Reparmiauto.com</a></h3>
+          <h4 class="resume-item-details">CEO &bull; Jun, 2011 &mdash; Feb, 2015</h4>
           <p class="resume-item-copy">If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.</p>
 
         </div><!-- end of resume-item -->
 
         <!-- by now you're getting the picture... -->
         <div class="resume-item">
-          <h3 class="resume-item-title">Simpson Lazer Tag</h3>
-          <h4 class="resume-item-details">Front Desk Attendant &bull; Jun, 1975 &mdash; May, 1978</h4>
+          <h3 class="resume-item-title">Solera Inc.</h3>
+          <h4 class="resume-item-details">Head of Corporate Performance Management &bull; Mar, 2010 &mdash; Feb, 2011</h4>
           <p class="resume-item-copy">Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.</p>
 
         </div><!-- end of resume-item -->
