--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -67,7 +67,7 @@ Smartplayds is an interactive, web-based content display solution for businesses
 
         <!-- another resume item -->
         <div class="resume-item">
-          <h3 class="resume-item-title"><a href="http://www.reparamiauto.com">Reparmiauto.com</a></h3>
+          <h3 class="resume-item-title"><a href="http://www.reparamiauto.com">Reparamiauto.com</a></h3>
           <h4 class="resume-item-details">CEO &bull; Jun, 2011 &mdash; Feb, 2015</h4>
           <p class="resume-item-copy">If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.</p>
 
