--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -54,14 +54,15 @@
           <h3 class="resume-item-title"><a href="http://smartplayds.com">SMARTplayds</a></h3>
           <h4 class="resume-item-details">Co-founder &bull; December, 2013 &mdash; Present</h4>
           <p class="resume-item-copy">Starting-up SmartPlay DS, the Smartest way to cast interactive content to your audience.
-Smartplayds is an interactive, web-based content display solution for businesses and events to engage customers and employees.
+Smartplayds is an interactive, web-based content display solution for businesses and events to engage with their audiences.</p>
+<p class="resume-item-copy">Battles won</p>
 </p>
           <ul class="resume-item-list">
-            <li>Ate lots of donuts</li>
-            <li>Fell asleep rarely</li>
-            <li>Left promptly at end of day (sometimes earlier)</li>
+            <li>Battle of winning our first customer</li>
+            <li>Battle of winning our first paying customer</li>
+            <li>Battle of winning our first US customer</li>
           </ul>
-          <p class="resume-item-copy">If you're going to copy paste markup, or edit it, just be sure to keep the appropriate classnames on your new elements for styling purposes.</p>
+          <p class="resume-item-copy">Woking Borough Council, Holiday Inn Express, Guildord and Woking Means Business Exhibitions among others as customers. In UK, US, Spain and Italy.</p>
 
         </div><!-- end of resume-item -->
 
