--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -70,7 +70,7 @@ Smartplayds is an interactive, web-based content display solution for businesses
         <div class="resume-item">
           <h3 class="resume-item-title"><a href="http://www.reparamiauto.com">Reparamiauto.com</a></h3>
           <h4 class="resume-item-details">CEO &bull; Jun, 2011 &mdash; Feb, 2015</h4>
-          <p class="resume-item-copy">If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.</p>
+          <p class="resume-item-copy">Leading Reparamiauto.com's project. Reparamiauto.com mission is to help drivers to find an auto repair shop they can trust. Responsible for the overall strategy, Marketing Plan and finance. Building partnership agreements and alliances to increase car repair coverage and to acquire car drivers traffic to the website..</p>
 
         </div><!-- end of resume-item -->
 
