--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -78,7 +78,12 @@ Smartplayds is an interactive, web-based content display solution for businesses
         <div class="resume-item">
           <h3 class="resume-item-title">Solera Inc.</h3>
           <h4 class="resume-item-details">Head of Corporate Performance Management &bull; Mar, 2010 &mdash; Feb, 2011</h4>
-          <p class="resume-item-copy">Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.</p>
+          <p class="resume-item-copy">Responsible for the creation and management of a new commercial business unit</p>
+          <ul class="resume-item-list">
+            <li>Develop the newly created unit: define the business model, create portfolio, setup pricing model.</li>
+            <li>Manage the data warehouse design and implementation.</li>
+            <li>Manage the implementation of the business intelligence tool.</li>
+          </ul>
 
         </div><!-- end of resume-item -->
 
