--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -233,7 +233,7 @@ Smartplayds is an interactive, web-based content display solution for businesses
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/javiermardona">@jglovier</a> adapting <a href="http://twitter.com/jglovier">@jglovier template</a> Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
+        <p class="footer-line">Made by <a href="http://twitter.com/javiermardona">@javiermardona</a> adapting <a href="http://twitter.com/jglovier">@jglovier template</a> Fork him on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
         <p class="footer-line">@2015</p>
       </footer>
 
