--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -39,6 +39,7 @@
 
       </header>
 
+      {% if site.resume_section_experience %}
       <!-- begin Experience -->
       <section class="content-section">
 
@@ -78,6 +79,7 @@
 
       </section>
       <!-- end Experience -->
+      {% endif %}
 
       {% if site.resume_section_education %}
       <!-- begin Education -->
