--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -5,33 +5,33 @@
 
   <body class="theme-{% if site.resume_theme %}{{ site.resume_theme }}{% endif %}">
 
-    <div class="wrapper">
+    <div class="wrapper" itemscope itemtype="http://schema.org/Person">
 
       <header class="page-header">
 
         <!-- You can turn off the avatar in _config.yml by setting to false -->
         {% if site.resume_avatar == 'true' %}
-        <img src="images/avatar.jpg" alt="my photo" class="avatar">
+        <img src="images/avatar.jpg" alt="my photo" class="avatar" itemprop="image">
         {% endif %}
 
         <!-- Your name is defined in the _config.yml file -->
-        <h1 class="header-name">{{ site.resume_name }}</h1>
+        <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
 
         <div class="title-bar">
 
           <!-- Your title is also defined in the _config.yml file -->
-          <h2 class="header-title">{{ site.resume_title }}</h2>
+          <h2 class="header-title" itemprop="jobTitle">{{ site.resume_title }}</h2>
 
           <!-- This is the markup for the icon links; moved out to an include because it's very verbose, and you shouldn't ever need to edit the markup (unless you want to re-order the icons); if you want to customize which links appear, define them in the _config.yml file -->
           {% include icon-links.html %}
         </div>
 
-        <div class="executive-summary">
+        <div class="executive-summary" itemprop="description">
           <p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button">Contact me</a>
+        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button" itemprop="email">Contact me</a>
         {% elsif site.resume_looking_for_work == 'no' %}
         <a class="contact-button not-looking">I'm not looking for work right now.</a>
         {% else %}
@@ -48,9 +48,9 @@
         </header>
 
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
-        <div class="resume-item">
-          <h3 class="resume-item-title">Springfield Nuclear Power Plant</h3>
-          <h4 class="resume-item-details">Safety Inspector &bull; Nov, 1980 &mdash; Present</h4>
+        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
+          <h3 class="resume-item-title" itemprop="name">Springfield Nuclear Power Plant</h3>
+          <h4 class="resume-item-details" itemprop="description">Safety Inspector &bull; Nov, 1980 &mdash; Present</h4>
           <p class="resume-item-copy">Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points:</p>
           <ul class="resume-item-list">
             <li>Ate lots of donuts</li>
@@ -62,17 +62,17 @@
         </div><!-- end of resume-item -->
 
         <!-- another resume item -->
-        <div class="resume-item">
-          <h3 class="resume-item-title">Sir Putt-A-Lot's Merrie Olde Fun Centre</h3>
-          <h4 class="resume-item-details">Windmill Crank Operator &bull; Jun, 1978 &mdash; Sept, 1979</h4>
+        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
+          <h3 class="resume-item-title" itemprop="name">Sir Putt-A-Lot's Merrie Olde Fun Centre</h3>
+          <h4 class="resume-item-details" itemprop="description">Windmill Crank Operator &bull; Jun, 1978 &mdash; Sept, 1979</h4>
           <p class="resume-item-copy">If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.</p>
 
         </div><!-- end of resume-item -->
 
         <!-- by now you're getting the picture... -->
-        <div class="resume-item">
-          <h3 class="resume-item-title">Simpson Lazer Tag</h3>
-          <h4 class="resume-item-details">Front Desk Attendant &bull; Jun, 1975 &mdash; May, 1978</h4>
+        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
+          <h3 class="resume-item-title" itemprop="name">Simpson Lazer Tag</h3>
+          <h4 class="resume-item-details" itemprop="description">Front Desk Attendant &bull; Jun, 1975 &mdash; May, 1978</h4>
           <p class="resume-item-copy">Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.</p>
 
         </div><!-- end of resume-item -->
@@ -89,9 +89,9 @@
           <h2>Education</h2>
         </header>
 
-        <div class="resume-item">
-          <h3 class="resume-item-title">Springfield College</h3>
-          <h4 class="resume-item-details">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
+        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name">Springfield College</h3>
+          <h4 class="resume-item-details" itemprop="description">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
           <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
         </div>
 
@@ -159,19 +159,19 @@
         </header>
 
         <div class="resume-item">
-          <h3 class="resume-item-title">Springfield Nuclear Power Plant</h3>
+          <h3 class="resume-item-title" itemprop="award">Springfield Nuclear Power Plant</h3>
           <h4 class="resume-item-details">Outstanding Achievement &bull; 2010</h4>
           <p class="resume-item-copy">Awarded for stopping a nuclear meltdown, even though I also started it.</p>
         </div>
 
         <div class="resume-item">
-          <h3 class="resume-item-title">Duff Beer Customer of the year</h3>
+          <h3 class="resume-item-title" itemprop="award">Duff Beer Customer of the year</h3>
           <h4 class="resume-item-details">1997 &mdash; 2001, 2003, 2008 &mdash; 2012</h4>
           <p class="resume-item-copy">Honored by <a href="https://en.wikipedia.org/wiki/Duff_Beer">Duff Beer</a> for being an outstanding customer several years straight. Qualifications included most beer consumed at a bar, most beer purchased, and most beer ralphed.</p>
         </div>
 
         <div class="resume-item">
-          <h3 class="resume-item-title">Moe's Patron of the Month</h3>
+          <h3 class="resume-item-title" itemprop="award">Moe's Patron of the Month</h3>
           <h4 class="resume-item-details">12/2001, 8/2004</h4>
           <p class="resume-item-copy">Specifically this prestigious awarded twice for stopping a robber with my belly.</p>
         </div>
