--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -50,8 +50,8 @@
         {% for job in site.data.experience %}
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">{{ job.position }}</h3>
-          <h4 class="resume-item-details" itemprop="description"><span style="display: block; float:left;">{{ job.company }}</span><span style="display: block; float:right;">{{ job.duration }}</span></h4><br/>
+          <h3 class="resume-item-title" itemprop="name">{{ job.company }}</h3>
+          <h4 class="resume-item-details" itemprop="description"><span style="display: block; float:left;">{{ job.position }}</span><span style="display: block; float:right;">{{ job.duration }}</span></h4><br/>
           <p class="resume-item-copy" style="clear: both;">{{ job.summary }}</p>
         </div><!-- end of resume-item -->
         {% endfor %}
@@ -60,23 +60,25 @@
       <!-- end Experience -->
       {% endif %}
 
+      
       {% if site.resume_section_education %}
       <!-- begin Education -->
       <section class="content-section">
-
         <header class="section-header">
           <h2>Education</h2>
         </header>
-
+        {% for education in site.data.education %}
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">Springfield College</h3>
-          <h4 class="resume-item-details" itemprop="description">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
-          <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
+          <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
+          <h4 class="resume-item-details" itemprop="description"><span style="display: block; float:left;">{{ education.degree }}</span><span style="display: block; float:right;">{{ education.year }}</span></h4>
+          <h5 class="resume-item-details" itemprop="description">{{ education.awards }}</h5>
+          <p class="resume-item-copy">{{ education.summary }}</p>
         </div>
-
+        {% endfor %}
       </section>
       <!-- end Education -->
       {% endif %}
+
 
       {% if site.resume_section_projects %}
       <!-- begin Projects -->
