Changed CollegeOrUniversity item prop from worksFor to alumniOf

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -89,7 +89,7 @@
           <h2>Education</h2>
         </header>
 
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name">Springfield College</h3>
           <h4 class="resume-item-details" itemprop="description">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
           <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
