Updates on _config, resume.css and resume.html

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -219,8 +219,9 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <p class="footer-line">Forked from <a href="http://twitter.com/jglovier">@jglovier</a> <a href="https://github.com/jglovier/resume-template">resume-template</a> repository.</p>
+        <p class="footer-line">Mattia Tupone</p>
+        <p class="footer-line">Thank you <a href="http://twitter.com/jglovier">@jglovier</a>! </p>
       </footer>
 
     </div>
