--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -21,7 +21,7 @@
 .page-header { padding: 1.5rem 0;
 
   .avatar {
-    width: 95px;
+    width: 30%;
     max-width: 100%;
     overflow: hidden;
     @include border-radius(100px);
