--- a/_includes/print-social-links.html
+++ b/_includes/print-social-links.html
@@ -7,30 +7,30 @@
   <li><strong>Github</strong>: {{ site.resume_social_links.resume_github_url }}</li>
   {% endif %}
 
-  <!-- Twitter link -->
+  <!-- Twitter link
   {% if site.resume_social_links.resume_twitter_url %}
   <li><strong>Twitter</strong>: {{ site.resume_social_links.resume_twitter_url }}</li>
-  {% endif %}
+  {% endif %} -->
 
-  <!-- Dribbble link -->
+  <!-- Dribbble link
   {% if site.resume_social_links.resume_dribbble_url %}
   <li><strong>Dribbble</strong>: {{ site.resume_social_links.resume_dribbble_url }}</li>
-  {% endif %}
+  {% endif %} -->
 
-  <!-- Facebook link -->
+  <!-- Facebook link
   {% if site.resume_social_links.resume_facebook_url %}
   <li><strong>Facebook</strong>: {{ site.resume_social_links.resume_facebook_url }}</li>
-  {% endif %}
+  {% endif %} -->
 
   <!-- LinkedIn link -->
   {% if site.resume_social_links.resume_linkedin_url %}
   <li><strong>LinkedIn</strong>: {{ site.resume_social_links.resume_linkedin_url }}</li>
   {% endif %}
 
-  <!-- Instagram link -->
+  <!-- Instagram link
   {% if site.resume_social_links.resume_instagram_url %}
   <li><strong>Instagram</strong>: {{ site.resume_social_links.resume_instagram_url }}</li>
-  {% endif %}
+  {% endif %} -->
 
   <!-- Website link -->
   {% if site.resume_social_links.resume_website_url %}
