Updated logo for certification

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -136,7 +136,7 @@
           <h4 class="resume-item-details">{{ recognition.organization }} &bull; {{ recognition.year }}</h4>
           <p class="resume-item-copy">{{ recognition.summary }}</p>
           <div class="logo">
-            <img src="../images/cert.jpg">
+            <img src="images/cert.jpg">
           </div>
         </div>
         {% endfor %}
